Refactor homepage to .io instead of .io/IceCreamPlace

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DhruvikPatel-coder.github.io/IceCreamPlace",
+  "homepage": "http://DhruvikPatel-coder.github.io",
   "name": "remindersui",
   "version": "0.1.0",
   "private": true,
