Refactor exact path to /IceCreamPlace and refactor homepage to /IceCreamPlace.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://DhruvikPatel-coder.github.io",
-  "name": "remindersui",
+  "homepage": "http://DhruvikPatel-coder.github.io/IceCreamPlace",
+  "name": "icecreamplace",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
